--- a/Depo/Depo/Presentation/SubViews/PhotoPrint/View/Popups/PhotoPrintAddAdressPopup.xib
+++ b/Depo/Depo/Presentation/SubViews/PhotoPrint/View/Popups/PhotoPrintAddAdressPopup.xib
@@ -34,7 +34,7 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="873"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" delaysContentTouches="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EMX-mO-Vhy">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" delaysContentTouches="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EMX-mO-Vhy">
                     <rect key="frame" x="0.0" y="0.0" width="393" height="839"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n4e-Zg-cAP">
