--- a/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouPhotoPrintCollectionViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouPhotoPrintCollectionViewCell.xib
@@ -75,6 +75,12 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Eh1-eJ-55P">
                                 <rect key="frame" x="83" y="122" width="70" height="70"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="thu-Fk-Yp3">
+                                <rect key="frame" x="20" y="202" width="196" height="20.333333333333343"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -84,15 +90,18 @@
                             <constraint firstItem="cWf-A6-JzX" firstAttribute="leading" secondItem="6tz-8y-gKG" secondAttribute="leading" constant="10" id="E1R-wW-Zhe"/>
                             <constraint firstAttribute="trailing" secondItem="nLG-8L-bPC" secondAttribute="trailing" constant="16" id="ECw-8a-2au"/>
                             <constraint firstItem="WFM-5h-s7s" firstAttribute="leading" secondItem="pQc-4w-Ey5" secondAttribute="trailing" constant="8" id="JFX-cA-SZB"/>
+                            <constraint firstAttribute="trailing" secondItem="thu-Fk-Yp3" secondAttribute="trailing" constant="20" id="NdU-zH-TOv"/>
                             <constraint firstItem="nLG-8L-bPC" firstAttribute="leading" secondItem="6tz-8y-gKG" secondAttribute="leading" constant="16" id="NjV-uT-89d"/>
                             <constraint firstItem="pQc-4w-Ey5" firstAttribute="leading" secondItem="6tz-8y-gKG" secondAttribute="leading" constant="10" id="PKW-Ql-YY3"/>
                             <constraint firstItem="Eh1-eJ-55P" firstAttribute="top" secondItem="pQc-4w-Ey5" secondAttribute="bottom" constant="88" id="Ut3-dx-V10"/>
                             <constraint firstItem="cWf-A6-JzX" firstAttribute="top" secondItem="Eh1-eJ-55P" secondAttribute="bottom" constant="87" id="VPX-2c-UOW"/>
                             <constraint firstAttribute="trailing" secondItem="WFM-5h-s7s" secondAttribute="trailing" constant="8" id="WHA-3r-CcW"/>
                             <constraint firstItem="WFM-5h-s7s" firstAttribute="top" secondItem="6tz-8y-gKG" secondAttribute="top" constant="8" id="YiO-XW-sMi"/>
+                            <constraint firstItem="thu-Fk-Yp3" firstAttribute="top" secondItem="Eh1-eJ-55P" secondAttribute="bottom" constant="10" id="d5U-f6-QM8"/>
                             <constraint firstAttribute="bottom" secondItem="cWf-A6-JzX" secondAttribute="bottom" constant="8" id="llD-T6-Eit"/>
                             <constraint firstItem="pQc-4w-Ey5" firstAttribute="top" secondItem="6tz-8y-gKG" secondAttribute="top" constant="10" id="nga-nw-Kxl"/>
                             <constraint firstItem="Eh1-eJ-55P" firstAttribute="leading" secondItem="6tz-8y-gKG" secondAttribute="leading" constant="83" id="oQT-vc-MBS"/>
+                            <constraint firstItem="thu-Fk-Yp3" firstAttribute="leading" secondItem="6tz-8y-gKG" secondAttribute="leading" constant="20" id="oTH-Aq-2al"/>
                             <constraint firstAttribute="trailing" secondItem="Eh1-eJ-55P" secondAttribute="trailing" constant="83" id="pQL-6A-M1s"/>
                         </constraints>
                     </view>
@@ -114,6 +123,7 @@
                 <outlet property="statusImageView" destination="EtJ-aY-2JW" id="h8U-78-97P"/>
                 <outlet property="statusLabel" destination="n2J-oX-Vyq" id="cdI-YR-gyP"/>
                 <outlet property="thumbnailPlusImage" destination="Eh1-eJ-55P" id="k4R-wk-lxy"/>
+                <outlet property="thumbnailPlusLabel" destination="thu-Fk-Yp3" id="teW-2l-Q2T"/>
             </connections>
             <point key="canvasLocation" x="320.61068702290078" y="210.21126760563382"/>
         </collectionViewCell>
