--- a/Depo/Depo/Presentation/UserStories/Settings/SetSecurityQuestionViewController/SelectQuestionViewController/SelectQuestionViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/SetSecurityQuestionViewController/SelectQuestionViewController/SelectQuestionViewController.xib
@@ -27,10 +27,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y0Z-rU-Ldu">
-                    <rect key="frame" x="28" y="350" width="319" height="53"/>
+                    <rect key="frame" x="8" y="52" width="359" height="53"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LcT-Yx-5r9">
-                            <rect key="frame" x="0.0" y="0.0" width="319" height="53"/>
+                            <rect key="frame" x="0.0" y="0.0" width="359" height="53"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4uK-kE-HdF">
                                     <rect key="frame" x="20" y="20" width="42" height="13"/>
@@ -39,7 +39,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wCW-BU-nvH">
-                                    <rect key="frame" x="281" y="15.5" width="22" height="22"/>
+                                    <rect key="frame" x="321" y="15.5" width="22" height="22"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="22" id="Nnl-za-kTo"/>
                                         <constraint firstAttribute="height" constant="22" id="aJb-1l-1Gg"/>
@@ -50,7 +50,7 @@
                                     </connections>
                                 </button>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uha-fL-WBr">
-                                    <rect key="frame" x="0.0" y="52" width="319" height="1"/>
+                                    <rect key="frame" x="0.0" y="52" width="359" height="1"/>
                                     <color key="backgroundColor" name="primaryBackground"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="1" id="BY0-zP-VNT"/>
@@ -72,7 +72,7 @@
                             </constraints>
                         </view>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nJP-mf-itX">
-                            <rect key="frame" x="0.0" y="53" width="319" height="0.0"/>
+                            <rect key="frame" x="0.0" y="53" width="359" height="0.0"/>
                         </tableView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -87,8 +87,8 @@
                         <constraint firstAttribute="trailing" secondItem="LcT-Yx-5r9" secondAttribute="trailing" id="yt6-1S-CdB"/>
                     </constraints>
                 </view>
-                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gj5-wy-K07">
-                    <rect key="frame" x="41" y="339.5" width="42" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gj5-wy-K07">
+                    <rect key="frame" x="41" y="41.5" width="42" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -98,10 +98,10 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="gj5-wy-K07" firstAttribute="leading" secondItem="hWg-ok-0ZM" secondAttribute="leading" constant="41" id="2EL-fv-VqG"/>
-                <constraint firstItem="hWg-ok-0ZM" firstAttribute="trailing" secondItem="Y0Z-rU-Ldu" secondAttribute="trailing" constant="28" id="9MU-RR-bGc"/>
+                <constraint firstItem="hWg-ok-0ZM" firstAttribute="trailing" secondItem="Y0Z-rU-Ldu" secondAttribute="trailing" constant="8" id="9MU-RR-bGc"/>
                 <constraint firstItem="gj5-wy-K07" firstAttribute="centerY" secondItem="Y0Z-rU-Ldu" secondAttribute="top" id="ICb-MH-wAg"/>
-                <constraint firstItem="Y0Z-rU-Ldu" firstAttribute="leading" secondItem="hWg-ok-0ZM" secondAttribute="leading" constant="28" id="KQI-1X-acZ"/>
-                <constraint firstItem="Y0Z-rU-Ldu" firstAttribute="top" secondItem="hWg-ok-0ZM" secondAttribute="top" constant="350" id="Sos-hC-T88"/>
+                <constraint firstItem="Y0Z-rU-Ldu" firstAttribute="leading" secondItem="hWg-ok-0ZM" secondAttribute="leading" constant="8" id="KQI-1X-acZ"/>
+                <constraint firstItem="Y0Z-rU-Ldu" firstAttribute="top" secondItem="hWg-ok-0ZM" secondAttribute="top" constant="52" id="Sos-hC-T88"/>
             </constraints>
             <point key="canvasLocation" x="53.600000000000001" y="48.125937031484263"/>
         </view>
